fix: scripts for a consistent Python usage

--- a/docs/src/content/docs/reference/scripts-commands.mdx
+++ b/docs/src/content/docs/reference/scripts-commands.mdx
@@ -62,7 +62,7 @@ import { Scripts } from 'aws-data-landing-zone';
 import { config } from '../bin/minimum_config';
 
 (async () => {
-  await Scripts.boostrapAll(config);
+  await (new Scripts()).boostrapAll(config);
 })();
 ```
 
