--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -235,7 +235,7 @@ Now you need to call the Landing Zone constructs from your CDK stacks.
     import {App} from 'aws-cdk-lib';
     import {config} from "./minimum_config";
     import * as sns from 'aws-cdk-lib/aws-sns';
-    import { DataLandingZone } from '@DataChefHQ/data-landing-zone';
+    import { DataLandingZone } from 'aws-data-landing-zone';
 
     const app = new App();
     const dlz = new DataLandingZone(app, config)
@@ -244,7 +244,7 @@ Now you need to call the Landing Zone constructs from your CDK stacks.
 
   </Fragment>
   <Fragment slot="python">
-    In your `main.py` file, add the Data Landing Zone construct: 
+    In your `main.py` file, add the Data Landing Zone construct:
     ```python
       import aws_cdk as cdk
       from aws_data_landing_zone import (
