--- a/docs/src/content/docs/introduction.mdx
+++ b/docs/src/content/docs/introduction.mdx
@@ -91,7 +91,7 @@ approvals in production environments.
   <Fragment slot="ts">
     ```ts
     import {App} from 'aws-cdk-lib';
-    import { DataLandingZone } from '@DataChefHQ/data-landing-zone';
+    import { DataLandingZone } from 'aws-data-landing-zone';
 
     const app = new App();
     const dlz = new DataLandingZone(app, {
@@ -132,7 +132,7 @@ approvals in production environments.
     ```python
     #!/usr/bin/env python3
     import aws_cdk as cdk
-    import recipes_dlz as dlz
+    import aws_data_landing_zone as dlz
 
     app = cdk.App()
     dlz.DataLandingZone(app,
@@ -169,7 +169,6 @@ approvals in production environments.
     )
 
 app.synth()
-
 ````
 
   </Fragment>
@@ -236,7 +235,7 @@ all subnets, to the private subnets in the `production` account's VPC in the `eu
   <Fragment slot="ts">
     ```ts {54-57}
     import {App} from 'aws-cdk-lib';
-    import { DataLandingZone } from '@DataChefHQ/data-landing-zone';
+    import { DataLandingZone } from 'aws-data-landing-zone';
 
     const app = new App();
     const dlz = new DataLandingZone(app, {
@@ -303,7 +302,7 @@ all subnets, to the private subnets in the `production` account's VPC in the `eu
     ```python {80-85}
     #!/usr/bin/env python3
     import aws_cdk as cdk
-    import recipes_dlz as dlz
+    import aws_data_landing_zone as dlz
 
     app = cdk.App()
     dlz.DataLandingZone(app,
